--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <table class="w-full">
                             <thead class="bg-green-50">
                                 <tr>
-                                    <th rowspan="2" class="px-4 py-3 text-left text-xs font-medium text-gray-700 uppercase border-r">No</th>
+                                    <th rowspan="2" class="px-2 py-2 text-left text-xs font-medium text-gray-700 uppercase border-r">No</th>
                                     <th rowspan="2" class="px-4 py-3 text-left text-xs font-medium text-gray-700 uppercase border-r">Nama Siswa</th>
                                     <th rowspan="2" class="px-4 py-3 text-left text-xs font-medium text-gray-700 uppercase border-r">NISN</th>
                                     <th rowspan="2" class="px-4 py-3 text-left text-xs font-medium text-gray-700 uppercase border-r">Kelas</th>
@@ -243,10 +243,10 @@
                                     <th class="px-2 py-2 text-center text-xs font-medium text-gray-700 uppercase border-r">LM5</th>
                                 </tr>
                                 <tr>
-                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP1</th>
-                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP2</th>
-                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP3</th>
-                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP4</th>
+                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r"> </th>
+                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r"> </th>
+                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r"> </th>
+                                    <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r"> </th>
                                     <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP1</th>
                                     <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP2</th>
                                     <th class="px-1 py-1 text-center text-xs font-medium text-gray-700 uppercase border-r">TP3</th>
